# ds-utils

./: .gitignore  README.md  pyproject.toml
src/ds_utils/: __init__.py
src/ds_utils/huggan_smithsonian_butterflies_subset/: __init__.py  _dataset.py  _module.py  example.ipynb  raw.ipynb
tests/: test_huggan_smithsonian_butterflies_subset.py
