[project]
name = "ds-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hieu", email = "hieu.buinguyen2352001@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "error::DeprecationWarning",
]


#log_cli = true
#log_cli_level = "INFO"